--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "sqlite3": "^5.1.7"
   },
@@ -19,6 +20,7 @@
     "@types/events": "^3.0.3",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.7",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
