--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "devDependencies": {
     "@types/events": "^3.0.3",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.7",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
