--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "types": ["node"],
-    "lib": ["es6", "dom"]
+    "lib": ["es6", "dom"],
+    "types": ["jest", "node"]
   }
 }
